# tinybase

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.txt  README.md  mkdocs.yml  pyproject.toml  tinybase.toml
.github/workflows/: ci.yml  docs.yml
app/: .gitignore  .prettierignore  .yarnrc.yml  README.md  components.json  eslint.config.js  index.html  openapi-ts.config.ts  package.json  vite.config.ts
app/scripts/: generate-client.js
app/src/: App.vue  api.ts  client-config.ts  index.css  main.ts  style.css
app/src/api/: index.ts
app/src/components/: CollectionSizesChart.vue  DataTable.vue  ErrorBoundary.vue  FormField.vue  FunctionStatsChart.vue  Icon.vue  Modal.vue  SchemaEditor.vue
app/src/components/ui/button/: Button.vue
app/src/components/ui/chart/: ChartContainer.vue  ChartTooltip.vue  index.ts
app/src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogScrollContent.vue  DialogTitle.vue
app/src/components/ui/dropdown-menu/: DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  DropdownMenuRadioItem.vue  DropdownMenuSeparator.vue  DropdownMenuSubTrigger.vue
app/src/components/ui/empty/: EmptyHeader.vue  (+2 more)
app/src/composables/: useAutoRefresh.ts  useDarkMode.ts  useErrorHandling.ts  useFormDialog.ts  useFormValidation.ts  useModal.ts  useNetworkStatus.ts  usePreviewParams.ts  useTableFilters.ts  useTheme.ts  useToast.ts
app/src/router/: index.ts
app/src/static/: auth.css  components.css  layout.css  sidebar.css  theme.css  utilities.css
app/src/stores/: auth.ts  collections.ts  functions.ts  portal.ts  settings.ts  users.ts
app/src/views/: CollectionDetail.vue  Collections.vue  Dashboard.vue  Extensions.vue  Files.vue  FunctionCalls.vue  Functions.vue  Login.vue  Profile.vue  RecordDetail.vue  Schedules.vue  Settings.vue  Users.vue
app/src/views/auth/: AuthLogin.vue  AuthPasswordResetConfirm.vue  AuthPasswordResetRequest.vue  AuthRegister.vue
apps/: README.md
apps/admin/: .env.development  .env.production  .yarnrc.yml  ICONS.md  components.json  eslint.config.js  openapi-ts.config.ts  package.json  tailwind.config.ts  vite.config.ts
apps/admin/scripts/: check-client.cjs
apps/admin/src/: vite-env.d.ts
apps/admin/src/components/: CollectionSizesChart.vue  DataTable.vue  FunctionStatsChart.vue  Icon.vue  UserProfileLink.vue
apps/admin/src/composables/: useFormValidation.ts  usePreviewParams.ts  useToast.ts
apps/admin/src/stores/: activity.ts  auth.ts  functions.ts  portal.ts  settings.ts
apps/admin/src/views/: CollectionDetail.vue  Collections.vue  Extensions.vue  Files.vue  Login.vue  Settings.vue  Users.vue
clients/typescript/: README.md  package.json
docs/: index.md
docs/contributing/: architecture.md  code-style.md  development.md  index.md  testing.md
docs/deployment/: docker.md  index.md  production.md  security.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guide/: admin-ui.md  authentication.md  collections.md  extensions.md  functions.md  index.md  scheduling.md
docs/includes/: abbreviations.md
docs/reference/: cli.md  index.md  python-api.md  rest-api.md
docs/stylesheets/: extra.css
functions/: __init__.py  add_numbers.py  api_test.py  fetch_url.py  hello.py  idempotent_test.py  versioned_func.py
openapi/: README.md  openapi.json
scripts/: README.md  export_openapi.py  repo.py
tests/: __init__.py  conftest.py  test_access_control.py  test_activity.py  test_basic.py  test_collections.py  test_extensions.py  test_files.py  test_function_deployment.py  test_function_execution.py  test_function_integration.py  test_function_loader.py  test_function_metrics.py  test_function_pool.py  test_functions.py  test_internal_tokens.py  test_resource_limits.py  test_schedules.py  test_settings.py  test_settings_pattern.py  test_static_files.py  test_token_scoping.py  utils.py
tinybase/: __init__.py  activity.py  auth.py  auth_jwt.py  cli.py  config.py  email.py  logs.py  metrics.py  rate_limit.py  scheduler.py  scheduling.py  storage.py  utils.py  version.py
tinybase-sdk/: README.md  pyproject.toml
tinybase-sdk/scripts/: generate_client.py
tinybase-sdk/src/tinybase_sdk/: __init__.py  cli.py  commands.py  config.py  context.py  decorator.py  deployment.py  logging.py
tinybase-sdk/src/tinybase_sdk/client/: __init__.py
tinybase-sdk/tests/: __init__.py  test_cli.py  test_config.py  test_context.py  test_decorator.py  test_logging.py
tinybase/admin_static/: .gitkeep
tinybase/api/: __init__.py  app.py
tinybase/api/routes/: __init__.py  admin.py  auth.py  collections.py  extensions.py  files.py  functions.py  schedules.py  static_admin.py  static_auth.py  static_user.py
tinybase/auth/: __init__.py  core.py  jwt.py
tinybase/cli/: admin.py  db.py  extensions.py  functions.py  main.py  utils.py
tinybase/collections/: __init__.py  schemas.py  service.py
tinybase/db/: __init__.py  core.py  models.py
tinybase/extensions/: __init__.py  hooks.py  installer.py  loader.py
tinybase/functions/: __init__.py  context.py  core.py  deployment.py  loader.py  pool.py  register.py
tinybase/migrations/: env.py
tinybase/migrations/versions/: 00fd0c887f45_auto_migration.py  5b77edb363ab_add_scheduler_configuration_settings.py  a1b2c3d4e5f6_add_metrics_table_and_interval.py  c3d4e5f6a7b8_add_auth_portal_settings.py  e5f6a7b8c9d0_change_background_color_to_image.py  f6a7b8c9d0e1_add_auth_portal_redirect_urls.py  ff0030cada65_add_token_scope_and_function_metrics.py  g7h8i9j0k1l2_change_auth_portal_default_to_false.py  h8i9j0k1l2m3_make_auth_token_user_id_nullable.py  i0j1k2l3m4n5_migrate_to_jwt.py  j1k2l3m4n5o6_add_function_version_tracking.py  k2l3m4n5o6p7_add_app_settings_table.py  l3m4n5o6p7q8_add_activity_log_table.py
tinybase/schedule/: __init__.py  scheduler.py  utils.py
tinybase/settings/: __init__.py  core.py  static.py
tinybase/templates/emails/: _footer.j2  account-creation.tpl  admin-report.j2  login-with-link.tpl  password-reset-request.j2  password-reset-request.tpl
(+39 files in other folders)
