[project]
name = "tinybase"
version = "0.1.0"
description = "Lightweight Backend-as-a-Service (BaaS) framework for Python developers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maximimlian Wolf" }]
keywords = ["baas", "backend", "fastapi", "api", "sqlite", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "bcrypt>=4.0.0",
    "croniter>=3.0.0",
    "typer>=0.13.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[project.scripts]
tinybase = "tinybase.cli:app"

[project.urls]
Homepage = "https://github.com/maximiliancw/tinybase"
Documentation = "https://github.com/maximiliancw/tinybase#readme"
Repository = "https://github.com/maximiliancw/tinybase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinybase"]

[tool.hatch.build.targets.sdist]
include = [
    "/tinybase",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

