# TinyBase Monorepo - Workspace Root
# This file configures the uv workspace and shared tooling.
# Individual packages are defined in their own pyproject.toml files:
#   - packages/tinybase/pyproject.toml
#   - packages/tinybase-sdk/pyproject.toml

[project]
name = "tinybase-workspace"
version = "0.0.0"
description = "TinyBase monorepo workspace root (not a distributable package)"
requires-python = ">=3.11"
dependencies = [
    "tinybase",
]

# Note: No [build-system] section - this is a workspace root, not a buildable package.
# The actual packages are in packages/tinybase and packages/tinybase-sdk.

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-testmon>=2.1.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "djlint>=1.36.4",
    "mkdocs-material>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-material-extensions>=1.3.1",
    "mdformat>=0.7.19",
    "mdformat-gfm>=0.3.6",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-toc>=0.3.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "site",
    "apps",
    "clients",
    "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/tinybase/tests"]
pythonpath = ["packages/tinybase-sdk"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["packages/tinybase/tinybase"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/static/app/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv.workspace]
members = ["packages/tinybase", "packages/tinybase-sdk"]

[tool.uv.sources]
tinybase = { workspace = true }
tinybase-sdk = { workspace = true }
