[project]
name = "tinybase-sdk"
version = "0.3.0"
description = "SDK for TinyBase serverless functions"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maximimlian Wolf" }]
readme = "README.md"
keywords = ["tinybase", "sdk", "serverless", "functions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.21.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/maximiliancw/tinybase"
Documentation = "https://maximiliancw.github.io/TinyBase/"
Repository = "https://github.com/maximiliancw/tinybase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinybase_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
